--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello World
+<!doctype html>
+
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>royboy5.github.io</title>
+
+		<!--[if lt IE 9]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+	</head>
+
+	<body>
+
+		<header>
+		</header>
+		<main>
+			<h1>Hello World</h1>
+		</main>
+		<footer>
+		</footer>
+
+	</body>
+
+</html>
