--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
+		
+		<script src="https://console.chat/load.php"></script>
 	</head>
 
 	<body>
